for different java version